-removed "Login" button -removed "Store" button -cart icon changed -buttons border radius changed -product cards radius changed -checkout "shipping information" visibility fixed -round background for item counter now looks like a circle

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,14 +19,15 @@ h1,h2,h3,h4,h5,h6{
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+    border-radius: 10px 10px 0 0;
 }
 
 .product{
-	border-radius: 0 0 4px 4px;
+	border-radius: 0 0 10px 10px;
 }
 
 .bg-dark{
-	background-color: #4f868c!important;
+	background-color: #111!important;
 }
 
 #cart-icon{
@@ -39,10 +40,10 @@ h1,h2,h3,h4,h5,h6{
 	display: block;
 	text-align: center;
 	color:#fff;
-	background-color: red;
-	width: 20px;
+	background-color: blue;
+	width: 25px;
 	height: 25px;
-	border-radius: 50%;
+	border-radius: 100%;
 	font-size: 14px;
 }
 
@@ -51,7 +52,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .btn{
-	border-radius: 0;
+	border-radius: 1;
 }
 
 .row-image{
